--- a/package.json
+++ b/package.json
@@ -73,7 +73,8 @@
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "com.moust.cordova.videoplayer": {}
     },
     "platforms": [
       "android"
